[package]
name = "defy"
version = "0.1.3"
edition = "2021"
description = "Replacement for the yew::html! macro with more Rust-idiomatic, editor-friendly syntax."
authors = ["SOFe <sofe2038@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/SOF3/defy"
categories = ["value-formatting", "wasm", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.109", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt"] }
yew = { version = "0.20.0", features = ["ssr"] }
